--- a/src/styles.css
+++ b/src/styles.css
@@ -52,13 +52,14 @@
   .card p {
     background-color: white;
     flex: 1;
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     margin-top: 5px;
     padding: 5px 20px 0px 20px;
     text-align: center;
   }
   
   .card img {
-    width: 100%;
+    width: 40%;
+    margin-top: 15px;
   }
   
